# xghemical

./: .gitignore  CMakeLists.txt  README.md
src/: main_window.cpp  main_window.h
